# REPOXD

./: README.md
202112012_EDD_Practica-main(3)/202112012_EDD_Practica-main/: README.md
202112012_EDD_Practica-main(3)/202112012_EDD_Practica-main/Practica1/: Avion.h  CMakeLists.txt  GestorAviones.cpp  GestorAviones.h  GestorPasajeros.cpp  GestorPasajeros.h  ListaAviones.cpp  ListaAviones.h  ListaDoblementeEnlazada.cpp  ListaDoblementeEnlazada.h  NodoAvion.h  NodoPasajero.h  Pasajero.h  Pila.cpp  Pila.h  aviones.json  main.cpp  pasajeros.json
